(WIP) Fixing contact info button align

--- a/pages/hire/style.css
+++ b/pages/hire/style.css
@@ -49,7 +49,7 @@ body {
   position: absolute;
   top: 35%;
   left: 50%;
-  margin-top: -75px;
+  margin-top: -1px;
   margin-left: -175px;
   color: white;
   font-size: 2em;
